--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "@nuxt/content": "^1.15.1",
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.19.3",
+    "downloadjs": "^1.4.7",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.25",
     "nuxt": "^2.15.8",
+    "pdf-lib": "^1.17.1",
     "vue": "^2.6.14",
     "vue-horizontal": "^0.8.12",
     "vue-server-renderer": "^2.6.14",
